add invite user fix bugs with one user disconnect and fix small bugs if leave room not owner